--- a/app/src/main/res/values/Amigo_background.xml
+++ b/app/src/main/res/values/Amigo_background.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <color name="amigo_background">#FFDF4D</color>
-</resources>
+<resources></resources>
