--- a/app/src/main/res/layout/nav_header_chat_bar.xml
+++ b/app/src/main/res/layout/nav_header_chat_bar.xml
@@ -23,7 +23,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/app_name"
+        android:text="@string/Heading"
+        android:textSize="25sp"
+        android:textColor="@color/Black"
+        android:fontFamily="@font/kbchatterbox"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
 
